WaltsonJS v2.0/grammar/grammar.txt
/**
 * Grammar created for translating a decision tree into
 * NodeJS code for creating an IBM Watson AssistantV1 chatbot.
 * 
 * This language's name is, albeit
 * not at all serious, WaltsonJS.
 * (credit to Jayshon Adams)
 * 
 * Created by Walt Loumakis
 */

program		:	definition
			|	definition COMMA program

definition	:	ID COLON unary

unary		:	TRUE
			|	FALSE
			|	number
			|	STRING
			|	object
			|	array

number		:	nonnegNum
			|	negNum

nonnegNum	:	INTEGER
			|	REAL

negNum		:	UMINUS INTEGER
			|	UMINUS REAL

object		:	OBRACE optProgram CBRACE

optProgram	:	program
			|	*EMPTY*

array		:	OBRACKET mixinList CBRACKET

mixinList	:	mixin
			|	mixin COMMA mixinList

mixin		:	definition
			|	object
